# textbook-rag

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
commands/: chunk.py  eval.py  index.py  models.py  prompt.py
