[project]
name = "textbook-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "huggingface-hub>=1.18.0",
    "langchain-text-splitters>=1.1.2",
    "llama-cpp-python>=0.3.25",
    "pymupdf>=1.27.2.3",
    "pymupdf4llm>=1.27.2.3",
    "rich>=15.0.0",
    "sentence-transformers>=5.5.1",
    "tqdm>=4.68.1",
]
